WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158732
[Win] The test accessibility/selected-text-range-aria-elements.html is failing.
https://bugs.webkit.org/show_bug.cgi?id=158732
Summary
[Win] The test accessibility/selected-text-range-aria-elements.html is failing.
Per Arne Vollan
Reported
2016-06-14 06:07:16 PDT
The method AccessibilityUIElement::selectedTextRange() is not implemented.
Attachments
Patch
(3.29 KB, patch)
2016-06-14 06:40 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-14 06:40:43 PDT
Created
attachment 281253
[details]
Patch
Brent Fulgham
Comment 2
2016-06-14 07:51:02 PDT
Comment on
attachment 281253
[details]
Patch r=me.
Brent Fulgham
Comment 3
2016-06-14 07:51:42 PDT
Comment on
attachment 281253
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281253&action=review
r=me.
> Source/WebCore/ChangeLog:8 > + Implement support for getting selected text range.
Does this allow us to unskip any tests?
Per Arne Vollan
Comment 4
2016-06-14 08:12:37 PDT
(In reply to
comment #3
)
> Comment on
attachment 281253
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=281253&action=review
> > r=me. > > > Source/WebCore/ChangeLog:8 > > + Implement support for getting selected text range. > > Does this allow us to unskip any tests?
I will have a look in the test expectations :) Thanks for reviewing!
Per Arne Vollan
Comment 5
2016-06-15 02:55:58 PDT
Committed
r202088
: <
https://trac.webkit.org/changeset/202088
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug