[Win] The test accessibility/selected-text-range-aria-elements.html is failing. https://bugs.webkit.org/show_bug.cgi?id=158732

Reviewed by Brent Fulgham.

Source/WebCore:

Implement support for getting selected text range.

* accessibility/win/AccessibilityObjectWrapperWin.cpp:
(WebCore::AccessibilityObjectWrapper::accessibilityAttributeValue):

Tools:

Implement selectedTextRange() method.

* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::selectedTextRange):


Canonical link: https://commits.webkit.org/176867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202088 268f45cc-cd09-0410-ab3c-d52691b4dbfc